# pokeapi-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/iced/: Cargo.toml  README.md
examples/iced/src/: main.rs
examples/iced/src/app/: mod.rs  style.rs
pokeapi-macro/: Cargo.toml  README.md
pokeapi-macro/src/: lib.rs
pokeapi-model/: Cargo.toml  README.md
pokeapi-model/src/: berries.rs  contests.rs  encounters.rs  evolution.rs  games.rs  items.rs  lib.rs  locations.rs  machines.rs  moves.rs  pokemon.rs  resource.rs  resource_lists_pagination.rs  resources.rs  utility.rs
pokeapi-model/src/utility/: common_models.rs  language.rs  mod.rs
pokeapi-rs/: Cargo.toml  README.md
pokeapi-rs/src/: client.rs  lib.rs
pokeapi-rs/src/structs/: berry.rs  contests.rs  mod.rs  utility.rs
src/: client.rs  error.rs  lib.rs  main.rs
src/app/: error.rs  mod.rs  pokemon.rs  style.rs
src/client/: mod.rs  reqwest.rs  ureq.rs
src/http_client/: mod.rs  reqwest.rs  ureq.rs
