[package]
name = "pokeapi"
version = "0.1.0"
edition = "2021"
description = "Rust bindings/wrapper and client for PokéAPI v2."
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/tedbyron/dex/tree/main/pokeapi-rs"
documentation = "https://docs.rs/pokeapi"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["pokemon", "pokeapi", "api"]
categories = ["api-bindings"]

# [package.metadata.docs.rs]
# features = ["client-ureq"]
# no-default-features = true

[workspace]
members = ["pokeapi-macro", "pokeapi-model"]

[features]
default = []

client-reqwest = ["reqwest"]
client-ureq = ["ureq", "maybe-async/is_sync"]

[dependencies]
maybe-async = "0.2.6"
pokeapi-model = { path = "./pokeapi-model", version = "0.1.2" }
serde = { version = "1.0.136", default-features = false }
serde_json = "1.0.79"
thiserror = "1.0.30"

[dependencies.reqwest]
version = "0.11.10"
default-features = false
features = ["rustls-tls", "json"]
optional = true

[dependencies.ureq]
version = "2.4.0"
default-features = false
features = ["json"]
optional = true

[profile.dev]
debug = 0
