[package]
name = "pokeapi"
version = "0.1.1"
edition = "2021"
description = "Rust bindings/wrapper and client for PokéAPI v2."
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/tedbyron/dex/tree/main/pokeapi-rs"
documentation = "https://docs.rs/pokeapi"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["pokemon", "pokeapi", "api"]
categories = ["api-bindings"]

[workspace]
members = ["pokeapi-macro", "pokeapi-model"]

[features]
default = ["client-ureq"]
__async = ["async-trait"]
__sync = ["maybe-async/is_sync"]

client-reqwest = ["reqwest", "__async"]
client-ureq = ["ureq", "__sync", "native-tls"]

[dependencies]
async-trait = { version = "0.1.53", optional = true }
maybe-async = "0.2.6"
native-tls = { version = "0.2.8", optional = true }
pokeapi-model = { path = "./pokeapi-model", version = "0.1.4" }
serde = { version = "1.0.136", default-features = false }
serde_json = "1.0.79"
thiserror = "1.0.30"
url = "2.2.2"

[dependencies.reqwest]
version = "0.11.10"
default-features = false
features = ["native-tls", "json"]
optional = true

[dependencies.ureq]
version = "2.4.0"
default-features = false
features = ["native-tls", "json"]
optional = true

[dev-dependencies]
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }

[profile.dev]
debug = 0
