[package]
name = "pokeapi-macro"
version = "1.1.2"
edition = "2018"
description = "Attribute macro for `pokeapi` structs."
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/tedbyron/dex/tree/main/pokeapi-macro"
documentation = "https://docs.rs/pokeapi-macro"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["pokeapi", "pokeapi-model"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.10"
syn = { version = "1.0.80", features = ["fold", "extra-traits"] }
