[package]
name = "pokeapi-macro"
version = "1.1.4"
edition = "2021"
description = "Attribute macros for `pokeapi-model`."
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/tedbyron/dex/tree/main/pokeapi-macro"
documentation = "https://docs.rs/pokeapi-macro"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["pokeapi", "pokeapi-model"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.17"
syn = { version = "1.0.89", features = ["fold", "extra-traits"] }
