[package]
name = "pokeapi-model"
version = "0.1.3"
edition = "2021"
description = "Data structures for PokéAPI v2."
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/tedbyron/dex/tree/main/pokeapi-model"
documentation = "https://docs.rs/pokeapi-model"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["pokemon", "pokeapi"]
categories = ["data-structures"]

[dependencies]
pokeapi-macro = { path = "../pokeapi-macro", version = "1.1.3" }
serde = { version = "1.0.130", features = ["derive"] }
