[package]
name = "pokeapi"
version = "0.1.0"
edition = "2018"
description = "Rust bindings/wrapper for PokéAPI v2."
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/tedbyron/dex/tree/main/pokeapi-rs"
documentation = "https://docs.rs/pokeapi"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["pokemon", "pokeapi", "api"]
categories = ["api-bindings"]

[dependencies]
pokeapi-model = { path = "../pokeapi-model", version = "0.1.0" }
ureq = { version = "2.2.0", features = ["json"] }

[profile.dev]
debug = 0
