[package]
name = "pokeapi"
version = "0.1.0"
edition = "2018"
description = "Rust bindings/wrapper for PokéAPI v2."
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/tedbyron/dex/tree/main/pokeapi-rs"
documentation = "https://docs.rs/pokeapi"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["pokemon", "pokeapi", "api"]
categories = ["api-bindings"]

[package.metadata.docs.rs]
features = ["client-ureq"]
no-default-features = true

[dependencies]
pokeapi-model = { path = "../pokeapi-model", version = "0.1.1" }
async-trait = { version = "0.1.51", optional = true }
maybe-async = "0.2.6"

[dependencies.reqwest]
version = "0.11.6"
default-features = false
features = ["rustls-tls", "json"]
optional = true

[dependencies.ureq]
version = "2.2.0"
default-features = false
features = ["json"]
optional = true

[features]
default = ["sync"]

async = ["reqwest", "async-trait"]
sync = ["ureq", "maybe-async/is_sync"]

[profile.dev]
debug = 0
